--- a/src/app/components/general/header/header.component.scss
+++ b/src/app/components/general/header/header.component.scss
@@ -195,7 +195,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 9;
+    z-index: 100; // Muy por encima de todo para evitar interferencias
     height: 100px;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
